Closed Bug 798426 Opened 13 years ago Closed 13 years ago

spdy/3 handlegoaway payload length wrong

Categories

(Core :: Networking: HTTP, defect)

16 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: mcmanus, Assigned: mcmanus)

References

Details

(Whiteboard: [spdy])

Attachments

(1 file)

spdy/3 changed the payload length to 8 from spdy/2's 4 but the spdy/3 implementation didn't make that change. receiving a valid 8 byte message results in a protocol error being generated and an immediate session shutdown when the goaway should result in an orderly shutdown.
Attached patch patch 0Splinter Review
Attachment #668491 - Flags: review?(honzab.moz)
Attachment #668491 - Flags: review?(honzab.moz) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
Depends on: 819044
Depends on: 823030
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: